worked on the logic

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Waffle</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Waffle</p>
                             <h2 class="font-semibold text-lg mb-1">Waffle with Berries</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$6.50</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$6.50</p>
                         </div>
                     </div>
                     <!-- Crème Brûlée -->
@@ -50,9 +50,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Crème Brûlée</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Crème Brûlée</p>
                             <h2 class="font-semibold text-lg mb-1">Vanilla Bean Crème Brûlée</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$7.00</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$7.00</p>
                         </div>
                     </div>
                     <!-- Macaron -->
@@ -69,9 +69,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Macaron</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Macaron</p>
                             <h2 class="font-semibold text-lg mb-1">Macaron Mix of Five</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$8.00</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$8.00</p>
                         </div>
                     </div>
                     <!-- Tiramisu -->
@@ -88,9 +88,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Tiramisu</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 cake">Tiramisu</p>
                             <h2 class="font-semibold text-lg mb-1">Classic Tiramisu</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$5.50</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$5.50</p>
                         </div>
                     </div>
                     <!-- Baklava -->
@@ -107,9 +107,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Baklava</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Baklava</p>
                             <h2 class="font-semibold text-lg mb-1">Pistachio Baklava</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$4.00</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$4.00</p>
                         </div>
                     </div>
                     <!-- Meringue -->
@@ -126,9 +126,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Pie</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Pie</p>
                             <h2 class="font-semibold text-lg mb-1">Lemon Meringue Pie</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$5.00</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$5.00</p>
                         </div>
                     </div>
                     <!-- Cake -->
@@ -145,9 +145,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Cake</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Cake</p>
                             <h2 class="font-semibold text-lg mb-1">Red Velvet Cake</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$4.50</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$4.50</p>
                         </div>
                     </div>
                     <!-- Brownie -->
@@ -164,9 +164,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Brownie</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Brownie</p>
                             <h2 class="font-semibold text-lg mb-1">Salted Caramel Brownie</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$4.50</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$4.50</p>
                         </div>
                     </div>
                     <!-- Panna Cotta -->
@@ -183,9 +183,9 @@
                             </button>
                         </div>
                         <div>
-                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1">Panna Cotta</p>
+                            <p class="text-[hsl(7,20%,60%)] text-sm mb-1 category">Panna Cotta</p>
                             <h2 class="font-semibold text-lg mb-1">Vanilla Panna Cotta</h2>
-                            <p class="text-[hsl(14,86%,42%)] font-semibold">$6.50</p>
+                            <p class="text-[hsl(14,86%,42%)] font-semibold price">$6.50</p>
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
             <div class="lg:sticky lg:top-8 h-fit" id="cartDiv">
                 <div class="bg-white rounded-lg p-6 shadow-lg">
                     <h2 class="text-2xl font-bold text-[hsl(14,86%,42%)] mb-6">Your Cart</h2>
-                    <div class="text-center py-8">
+                    <div class="text-center py-8 emptyCart">
                         <img src="./assets/images/illustration-empty-cart.svg" alt="" class="w-24 h-24 mx-auto mb-4">
                         <p class="text-[hsl(12,20%,44%)] font-semibold">Your added items will appear here</p>
                     </div>
@@ -204,7 +204,7 @@
                         <div class="border-t border-[hsl(13,31%,94%)] pt-4 mt-4">
                             <div class="flex justify-between items-center mb-4">
                                 <span class="text-sm">Order Total</span>
-                                <span class="text-2xl font-bold">$0.00</span>
+                                <span class="text-2xl font-bold order-total">$0.00</span>
                             </div>
                             <div class="text-center mb-4">
                                 <img src="./assets/images/icon-carbon-neutral.svg" alt="" class="mx-auto mb-2">
